       - Fixed issue #791, EncoderService exposed size-fixed lists of ignored and accepted media types.
         Reported by Tal Liron.
    - Enhancements
      - Added support of nowrap "deflater" (support of GZIP compatible compression), issue #786.
        Reported and contributed by Tal Liron.
      - Added ability to override Accept-encoding header values #654.
        Proposed by Tal Liron.

- 2.1.4 (09/07/2013)
    - Bug fixed
       - Fixed issues #774, #778 - Removed default support of JavaBeans XML-deserialization, 
         binary-deserialization on ObjectRepresentation class.
         Reported by David Jorm.

- 2.1.3 (08/23/2013)
    - Bug fixed
       - Fixed issue #734 - Implementations of XmlHttpRequest in IE versions prior to IE10 turn 
         204 status into 1223. Reported by Koen Maes.
       - Fixed issue #739 - copy extension headers from JAX-RS api to restlet response.
         Reported by Mark Kharitonov.
       - Fixed issue #727 generation of JSON extension for GWT edition.
       - Fixed issue #757 - Infinite Loop in Feed.
       - Fixed issue #753 - Date concurrency issue due to broken caching attempts. 
         Reported by @effad. Solved by Robert Fischer and Tim Peierls.
       - Fixed issue #774 - Removed default support of JavaBeans XML-serialization.
         Reported by David Jorm, Dinis Cruz, Abraham Kang and Alvaro Munoz. 
       - Fixed issue #778 - Removed default support of JavaBeans binary-serialization.
         Reported by David Jorm.
    - Misc
       - Added log warning when an authentication scheme does not define a "realm" parameter.
         Reported by Loïc Oudot (#759).

- 2.1.2 (02/28/2013)
    - Bug fixed
       - Log initialization issue in engine with GAE edition fixed.
         Occurred in production.
       - Internal HTTP connector didn't properly configure the
         socket. Factorized client side logic.
       - Fixed HTTPS issues in internal connector.